--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "connect": "^3.7.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "fluent-ffmpeg": "^2.1.2",
