--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.23",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0",
+    "multer-gridfs-storage": "^4.2.0"
   }
 }
