--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "mongoose": "^5.9.23",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
